
<resources>
    <string name="app_name">ETCV</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>



    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="skills">Skills</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="contact_me">Contact Me</string>
    <string name="social">Social</string>
    <string name="app_info">App Info</string>
    <string name="name">Eirini Televantou</string>
    <string name="senior_android_developer">Senior Android Developer</string>
    <string name="location">Birmingham, UK</string>
    <string name="professional_summary">Professional Summary</string>
    <string name="professional_experience_long">Detail-oriented Android developer with almost 6 years of professional
        Android development experience. \n\nProficient in Mobile development from start to finish. Well-versed in inspecting
        finished projects to maintain alignment with high quality standards. \n\nAlways using latest technologies available
        and experiment with different architectures. \n\nGreat managerial skills and able to train junior developers and
        inspire them to always be detailed oriented and to always push their limits.
    </string>
    <string name="university_of_southampton">University of \nSouthampton</string>
    <string name="master_of_science">Master of Science</string>
    <string name="bachelor_of_science">Bachelor of Science</string>
    <string name="computer_science">Computer Science</string>
    <string name="first_class_1_1">First Class - 1:1</string>
    <string name="birmingham_england">Birmingham, England</string>
    <string name="birmingham_city_university">Birmingham City \nUniversity</string>
    <string name="merit">Merit</string>
    <string name="dates">Dates</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="examples_of_work">Examples of Work</string>
    <string name="technologies_used">Technologies Used</string>
    <string name="architecture">Architecture</string>
    <string name="language">Language</string>
    <string name="network_library">Network Library</string>
    <string name="the_app_has_been_developed_using_the_mvvm_architecture_along_with_jetpacks_live_data_binding_methods">The app has been developed using the MVVM Architecture along with jetpacks live data binding methods.</string>
    <string name="the_app_has_been_solely_written_in_kotlin_and_rxkotlin">The app has been solely written in Kotlin and RXKotlin.</string>
    <string name="the_network_library_used_in_the_app_is_retrofit">The network library used in the app is Retrofit.</string>
    <string name="dependency_injection_library">Dependency Injection Library</string>
    <string name="dagger_2_has_been_use_to_inject_dependencies_in_the_app">Dagger 2 has been use to inject dependencies in the app.</string>
    <string name="other_libraries">Other Libraries</string>
    <string name="libraries_used">Libraries used include: \n  -https://github.com/yarolegovich/DiscreteScrollView \n -https://github.com/hdodenhof/CircleImageView \n -https://square.github.io/picasso/ \n -https://github.com/google/gson</string>
    <string name="app_code">App code</string>
    <string name="source_code_link">You can access the source code at: https://github.com/eirini91/CV</string>
    <string name="download_pdf_cv">Download PDF CV</string>
    <string name="download_and_email_pdf_cv">Download and Email PDF CV</string>
    <string name="email">Email</string>
    <string name="eirini_email">televantou91@gmail.com</string>
    <string name="eirini_televantou">Eirini Televantou</string>
    <string name="phone_number">Phone Number</string>
    <string name="eirini_phone">+447711580804</string>
    <string name="linkedin">LinkedIn</string>
    <string name="linkedin_url">https://www.linkedin.com/in/eirini-televantou-91ba0028/</string>
    <string name="github">Github</string>
    <string name="github_url">https://github.com/eirini91</string>
    <string name="appstore_url"><![CDATA[https://play.google.com/store/apps/developer?id=Eirini+Televantou&hl=en]]></string>
    <string name="google_play_store">Google Play Store</string>
    <string name="notification_channel_id">etcv_channel_id</string>
    <string name="notification_channel_name">CV Downloading</string>
    <string name="notification_channel_description">Notification Channel to notify users when the CV has been downloaded</string>
    <string name="download_success">File downloaded. Check your downloads or click on the notifcation above</string>
    <string name="download_failure">Something went wrong. Please try again.</string>
    <string name="cv_downloaded">CV Downloaded</string>
    <string name="eirini_cv_downloaded">Eirini\'s CV is downloaded</string>
    <string name="select_app_to_send">Select an app to send the email</string>
    <string name="checkout_cv">Check out Eirini\'s CV</string>
    <string name="etcv">Eirini Televantou CV</string>

</resources>
