<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:clipToPadding="false"
            android:paddingEnd="30dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/email"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:autoLink="email"
                android:text="@string/eirini_email"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/phone_number"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:autoLink="phone"
                android:text="@string/eirini_phone"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/linkedin"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:autoLink="web"

                android:scrollbars="vertical"
                android:text="@string/linkedin_url"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/github"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:autoLink="web"
                android:text="@string/github_url"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/google_play_store"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/appstore_url"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_code"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/source_code_link"
                android:textSize="13sp" />


        <Button
                android:id="@+id/btn_okay"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_bg"
                android:text="@android:string/ok"
                android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
