<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:clipToPadding="false"
            android:paddingEnd="30dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/architecture"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/the_app_has_been_developed_using_the_mvvm_architecture_along_with_jetpacks_live_data_binding_methods"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/language"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/the_app_has_been_solely_written_in_kotlin_and_rxkotlin"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/network_library"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/the_network_library_used_in_the_app_is_retrofit"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/dependency_injection_library"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/dagger_2_has_been_use_to_inject_dependencies_in_the_app"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/other_libraries"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/libraries_used"
                android:textSize="13sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_code"
                android:textSize="18sp" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/source_code_link"
                android:textSize="13sp" />


        <Button
                android:id="@+id/btn_okay"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_bg"
                android:text="@android:string/ok"
                android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
